# ferm

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CHANGELOG.md  CHANGELOG.ru.md  README.md  README.ru.md  committed.toml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  e2e.yml  release.yml  test.yml
docs/: ROADMAP.md  ROADMAP.ru.md
fuzz/: README.md  fuzz_config.py  fuzz_import.py
fuzz/seeds/import/: filter.save  mangle.save  nat.save
packaging/: Dockerfile  build.py  collect_licenses.py  entry.py  release-notes.md.tmpl  scan_image.py
packaging/apk/: APKBUILD  Dockerfile  ferm.initd  pyferm.post-deinstall  pyferm.post-install
packaging/deb/: Dockerfile  ferm.conf
packaging/deb/debian/: NEWS  changelog  clean  control  copyright  pyferm.dirs  pyferm.examples  pyferm.ferm.service  pyferm.install  pyferm.postinst  pyferm.postrm  pyferm.preinst  rules
packaging/deb/examples/: ssh-throttle.conf.example
packaging/dns_gate/: Dockerfile  check.ferm  resolver.py  run.sh
packaging/rpm/: Dockerfile  pyferm.spec  rpmlint.toml
src/pyferm/: __init__.py  __main__.py  analysis.py  cli.py  config.py  domains.py  errors.py  etckeeper.py  functions.py  import_ferm.py  modules.py  nftset.py  parser.py  plan.py  resolver.py  rules.py  scope.py  streams.py  tokenizer.py  tree.py  values.py  walker.py
src/pyferm/backend/: __init__.py  base.py  iptables.py  nft.py
tests/: conftest.py  test_scaffold.py
tests/conformance/nft/: tdotparser.py  test_nft_conformance.py  test_tdotparser.py
tests/corpus/: README.md  __init__.py  canon.py  provenance.yaml  test_corpus.py  test_provenance.py
tests/corpus/configs/: americancouncils.ferm  antizapret-vpn.ferm  brutesque-swarm.ferm  ferm-tools-example.ferm  grnet-synnefo.ferm  himdel-dotfiles.ferm  ivansible-natmss.ferm  meetings-devops.ferm  rootnode-lxc.ferm  tapirgo-common.ferm  unexicon.ferm  wuvt-router.ferm  zonefile
tests/e2e/: conftest.py  test_datapath_e2e.py  test_delta_apply_e2e.py  test_docker_coexist_e2e.py  test_etckeeper_e2e.py  test_lockout.py  test_nft_e2e.py  test_plan_nft_validate_e2e.py
tests/e2e/datapath/: Dockerfile  driver.py  install-toolbox.sh  netns.py  oracle.py  scenarios.py
tests/e2e/docker_coexist/: Dockerfile  driver.py
tests/e2e/etckeeper/: Dockerfile  __init__.py  driver.py
tests/e2e/lockout/: Dockerfile  driver.py
tests/e2e/nft/: Dockerfile  driver.py
tests/golden/: conftest.py  normalize.py  runner.py  sortpl.py  test_delta_nft_golden.py  test_diagnostics.py  test_golden.py  test_nft_golden.py  test_plan_golden.py  test_plan_nft_golden.py
tests/golden/delta_nft/: add_rule.ferm  add_rule.result  add_rule.save  add_rule6.ferm  add_rule6.result  add_rule6.save6  desuet_and_foreign.ferm  desuet_and_foreign.result  desuet_and_foreign.save  dual_stack.ferm  dual_stack.result  dual_stack.save6  idempotent.ferm  modify_set.ferm  modify_set.result  modify_set.save  new_chain.ferm  new_chain.result  policy_only.ferm  policy_only.result  policy_only.save
tests/golden/nft/: basic.ferm  basic.nft  chain_priority.ferm  chain_priority.nft  dual_stack.ferm  dual_stack.nft  filter_misc.ferm  filter_misc.nft  ip6_icmp.ferm  ip6_icmp.nft  ip6_reject.ferm  ip6_reject.nft  ip6_reject_tcp_reset.ferm  ip6_reject_tcp_reset.nft  jump_userchain.ferm  jump_userchain.nft  nat.ferm  nat.nft  nat_port.ferm  nat_port.nft  nat_port_no_proto.ferm  negated_match.ferm  negated_match.nft  port_range.ferm  port_range.nft  protoset_l4proto_order.ferm  protoset_l4proto_order.nft  reject_types_ip.ferm  reject_types_ip.nft  reject_types_ip6.ferm  reject_types_ip6.nft  set_collapse.ferm  set_collapse.nft  setref_cow_legal_family.ferm  setref_cow_legal_family.nft  setref_dualstack.ferm  setref_dualstack.nft  setref_iface.ferm  setref_iface.nft  setref_interval.ferm  (+16 more)
tests/golden/plan/: canon.ferm  canon.save  dualstack.ferm  dualstack.result  dualstack.save  dualstack.save6  dup_rule.result  dup_rule.save  empty.ferm  empty.result  empty.save  foreign_chain.result  foreign_chain.save  kernel_table.result  kernel_table.save  noflush.ferm  noflush.result  noflush.save  policy.result  reorder.ferm  reorder.result  reorder.save
tests/golden/plan_nft/: add_remove.ferm  add_remove.result  add_remove.save  canon_eb.ferm  canon_eb.result  canon_eb.saveeb  canon_ip.ferm  canon_ip.save  desuet_base.ferm  desuet_base.result  desuet_base.save  diff_format.ferm  diff_format.result  diff_format.save  dup_rule.ferm  dup_rule.result  empty.result  family_arp.ferm  family_arp.result  family_arp.savearp  family_eb.ferm  family_eb.result  family_eb.saveeb  family_ip6.ferm  fold_clean.save  (+20 more)
tests/integration/: __init__.py  conftest.py  test_etckeeper_git.py
tests/property/: __init__.py  conftest.py  differential_cli.py  oracle.py  oracle_driver.pl  test_capture_boundary.py  test_config_differential.py  test_diagnostic_order.py  test_differential.py  test_double_negation.py  test_frozen_values.py  test_nft_collapse.py  test_oracle_driver_pins.py  test_parse_family.py  test_reroute_invariant.py  test_setref_canon.py  test_synthetic_modules.py  test_unfold.py  test_validators.py
tests/unit/: test_address_magic_setref.py  test_analysis.py  test_backend_iptables.py  test_backend_nft.py  test_chain_priority.py  test_cli.py  test_config.py  test_datapath_oracle.py  test_datapath_scenarios.py  test_domains.py  test_errors.py  test_etckeeper.py  test_functions.py  test_import_ferm.py  test_modules.py  test_nft_set_registry.py  test_nft_translate_setref.py  test_nftset.py  test_packaging_build.py  test_packaging_deb.py  test_packaging_entry.py  test_packaging_scan.py  test_parse_set.py  test_parse_to_block.py  test_parser.py  test_plan_canon.py  test_plan_delta.py  test_plan_delta_convergence.py  test_plan_diff.py  test_plan_nft_canon.py  test_plan_nft_list.py  test_plan_nft_script.py  test_plan_parse.py  test_plan_parse_set_list.py  test_plan_parse_set_script.py  test_plan_render.py  test_plan_set_diff.py  test_resolver.py  test_routing_sets.py  test_rules.py  (+10 more)
(+7 files in other folders)
