[project]
name = "ferm"
version = "0.1.0.dev0"
description = "For Easy Rule Making - a frontend for iptables (Python port)"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "Auke Kok" }, { name = "Max Kellermann" }]
maintainers = [{ name = "Boris Talovikov" }]
keywords = ["firewall", "iptables", "nftables", "netfilter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "dnspython>=2.8.0",
]

[project.scripts]
ferm = "pyferm.cli:main"
import-ferm = "pyferm.import_ferm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src-layout is not auto-detected by hatchling; name the package explicitly.
packages = ["src/pyferm"]

[tool.uv]
default-groups = ["dev", "test", "lint"]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                # isort
  "N",                # pep8-naming
  "D",                # pydocstyle
  "UP",               # pyupgrade
  "B",                # bugbear
  "FBT",              # boolean-trap (positional bool args)
  "A",                # builtins shadowing
  "C4",               # comprehensions
  "SIM",              # simplify
  "PTH",              # use pathlib
  "RUF",              # ruff-specific
  "PIE",              # misc lints
  "RET",              # return consistency
  "RSE",              # raise: drop redundant parens on bare raise
  "TID",              # tidy imports
  "FURB",             # refurb modernisation
  "TRY",              # exception hygiene
  "ARG",              # unused arguments
  "PERF",             # performance anti-patterns
  "BLE",              # blind except
  "TC",               # typing-only imports
  "SLF",              # private-member access
  "ICN",              # import naming conventions
  "PGH",              # pygrep (blanket noqa / type: ignore)
  "PL",               # pylint (PLE/PLW/PLC/PLR)
  "DTZ",              # naive datetime
  "G",                # logging format
  "LOG",              # logging hygiene
  "PT",               # pytest style
  "ERA",              # commented-out code
  "ISC",              # implicit string concatenation
  "FLY",              # static str.join -> f-string
  "SLOT",             # __slots__ on str/tuple subclasses
]
# D213 (summary on the second line) is the project's docstring shape;
# it is mutually exclusive with D212, which the pep257 convention
# enables -- hence the explicit extend-select + D212 ignore.
extend-select = ["D213"]
ignore = [
  "D212",    # we use D213 (summary on second line); see extend-select
  "TRY003",  # long messages in raise FermError(...) ARE the product's
             # error text, ported verbatim from the Perl die strings;
             # a custom exception class per message is over-engineering
  "PLC0415", # function-local imports are deliberate: signal/termios
             # mirror the oracle's lazy `require POSIX`, and tests
             # import the unit under test inside the test function
  # The complexity quartet is inherited: enter()/handle() port the
  # oracle's ~770-line recursive-descent monolith verbatim (a sanctioned
  # phase 1 decision); splitting it is the Phase 7 AST refactor, and the
  # golden suite guards the behaviour until then.
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  # FBT001/FBT002 (boolean-typed positional parameter) fire only on the
  # ported recursive-descent signatures -- parse_option/_parse_def_option/
  # _maybe_consume_negation/negate_value/pick_resolver -- whose positional
  # bool shape mirrors the Perl oracle verbatim (same Phase 7 / golden-
  # suite-guarded bucket as the complexity quartet above).  FBT003 (a bare
  # bool passed positionally at a *call*) stays on: it is a call-site
  # readability gate that changes no signature.
  "FBT001", # boolean-typed positional parameter in a definition
  "FBT002", # boolean default for a positional parameter
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["pyferm"]

[tool.ruff.lint.extend-per-file-ignores]
# Test-method names are their own documentation (D); asserting against
# literal expected values is the point of a test (PLR2004) -- and passing
# a bare bool to the unit under test (format_bool(True), pick_resolver(
# True, ...)) is that same literal-as-input pattern, not a boolean trap
# (FBT).
"tests/*" = ["D", "PLR2004", "FBT"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unreachable = true
# Stricter-than-strict: TypedDict/Concatenate soundness checks plus the
# opt-in error codes strict does not enable.  ignore-without-code keeps
# every suppression auditable (pairs with the pygrep blanket-ignore hook).
extra_checks = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "unused-awaitable",
]

[tool.pyright]
# Pin the analysis scope: without it pyright walks the whole worktree
# (including throwaway scratch files) and the gate stops being stable.
include = ["src", "tests", "noxfile.py"]
pythonVersion = "3.11"
# Match mypy's strictness: two checkers at different strictness levels
# only pretend to be redundant -- the weaker one stops catching the
# classes of errors the duplication exists for.
typeCheckingMode = "strict"

# Tests stay strict except for patterns that are the point of a test:
# importing the private unit under test, loose lambda stubs (whose
# completeness mypy --strict still checks), and autouse fixtures that
# pyright cannot see being called.
[[tool.pyright.executionEnvironments]]
root = "tests"
# The env root replaces the project root for import resolution, which
# would break the suite's absolute self-imports (``tests.corpus.canon``).
extraPaths = ["."]
reportPrivateUsage = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnusedFunction = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-config/--strict-markers turn config typos and unknown marks
# into errors instead of silently-ignored decoration.
addopts = "-ra --strict-config --strict-markers"
markers = [
  "lockout: containerized --interactive anti-lockout e2e (opt-in, needs docker)",
  "nft_e2e: containerized nft backend round-trip + coexistence e2e (opt-in, needs docker)",
]
xfail_strict = true
# Any warning is a failure: deprecations surface on the oldest
# interpreter of the matrix instead of breaking on the newest one, and
# (with PYTHONWARNDEFAULTENCODING=1, set by the nox sessions)
# EncodingWarning turns every locale-dependent IO default into an error.
filterwarnings = ["error"]
# A hung test (interactive prompt, stuck subprocess) must fail, not
# stall the gate.  The thread method, not signal: the port itself owns
# SIGALRM (--interactive), so a per-test alarm could be clobbered.
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["pyferm"]
branch = true

[tool.coverage.report]
show_missing = true
# No-regression floor just under the measured baseline (84.58% on
# 2026-06-11); ratchet it up as the port's error paths gain tests.
# New code is additionally held to 90% by the diff-cover patch gate in
# the ``coverage`` nox session.
fail_under = 84
exclude_also = [
    # Type-only branches never execute at runtime.
    "if TYPE_CHECKING:",
    # Escape hatch for paths a test cannot exercise (documented per site).
    "pragma: no cover",
]

[tool.importlinter]
root_packages = ["pyferm"]

# The render/commit seam the Phase 2 nft backend depends on: the
# compiler core reaches execution only through injected callables
# (execute/emit_line/read_save), never by importing the backend.  Only
# the cli composition root may wire the two sides together.
[[tool.importlinter.contracts]]
name = "the compiler core does not import the backend"
type = "forbidden"
source_modules = [
  "pyferm.errors",
  "pyferm.values",
  "pyferm.config",
  "pyferm.tokenizer",
  "pyferm.modules",
  "pyferm.resolver",
  "pyferm.scope",
  "pyferm.rules",
  "pyferm.domains",
  "pyferm.functions",
  "pyferm.parser",
  "pyferm.import_ferm",
]
forbidden_modules = ["pyferm.backend"]

# The full dependency order, frozen from the measured import graph
# (TYPE_CHECKING imports included).  Modules sharing a layer (``|``)
# must stay mutually independent.  A new edge that violates this is
# either a bug or a deliberate design change -- update the contract
# explicitly in the latter case.
[[tool.importlinter.contracts]]
name = "bottom-up layering"
type = "layers"
layers = [
  "pyferm.cli | pyferm.import_ferm",
  "pyferm.backend",
  "pyferm.parser",
  "pyferm.functions",
  "pyferm.domains",
  "pyferm.rules",
  "pyferm.scope",
  "pyferm.modules | pyferm.tokenizer | pyferm.resolver",
  "pyferm.values",
  "pyferm.config",
  "pyferm.errors",
]

[tool.bandit]
# ferm's job is to run iptables and admin-authored shell commands as
# root, faithfully porting Perl's system()/backticks/pipe-opens -- the
# subprocess family of findings describes the product, not a defect.
# New findings outside this list still fail the audit session.
skips = [
    "B101", # assert: dev-time invariants; ferm is never run with -O
    "B105", # hardcoded-password heuristic fires on the lexer's
            # `token` variables (a parser token is not a credential)
    "B404", # import subprocess
    "B602", # shell=True -- the Perl system()/backtick port
    "B603", # subprocess without shell (tool paths from find_tool)
    "B604", # shell=True via the injected execute callable
    "B607", # partial executable path: --test mode uses bare tool
            # names by design (find_tool returns `iptables` verbatim)
]

[tool.codespell]
# reference/ is the frozen Perl oracle and tests/corpus/configs holds
# third-party wild configs verbatim: never spell-check upstream text.
skip = ".git,.venv,.nox,uv.lock,reference,tests/corpus/configs,htmlcov,build,dist,mutants,*.pyc"
# netfilter vocabulary codespell mis-flags:
# * iif -- nft "input interface" expression
# * rsource -- iptables `recent --rsource`
# * ect -- ECN ECT codepoint (ecn-ip-ect)
ignore-words-list = "iif,rsource,ect"

[tool.deptry]
# The import name differs from the distribution name (ferm -> pyferm).
known_first_party = ["pyferm"]
# noxfile.py imports its dev-group tooling by design; mutants/ is
# mutmut's generated working copy of src and tests; fuzz/ imports
# atheris from its own opt-in group (crashfuzz).
extend_exclude = ["reference", "noxfile\\.py", "mutants", "fuzz"]

[tool.vulture]
# Clean at 80 today; the hook is a no-regression gate against dead code
# creeping in during the port (min_confidence below 80 drowns in the
# dataclass fields the rule-structure contract carries for Phase 2).
min_confidence = 80
paths = ["src/pyferm"]

[tool.mutmut]
# src-layout: mutmut copies each source path into mutants/ verbatim,
# prepends mutants/src to sys.path and drops the original src entry, so
# `import pyferm` resolves to the trampoline-instrumented copy.
source_paths = ["src"]
# Kill set: the in-process unit suite only.  The differential property
# fuzzers cover nearly every line, so coverage-based selection would
# pick them for almost every mutant at dozens of Perl-oracle subprocess
# calls per run; golden/corpus suites execute `python -m pyferm` in a
# child process, which imports the unmutated venv install and can never
# kill a mutant (the trampoline activates via sys.path + env var).
pytest_add_cli_args_test_selection = ["tests/unit"]
# Deterministic test order keeps mutmut's per-test timing baseline
# (its timeout estimates) stable across runs.
pytest_add_cli_args = ["-p", "no:randomly"]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pre-commit>=4.6.0",
]
lint = [
    "actionlint-py>=1.7.12.24",
    "bandit[toml]>=1.9.4",
    "deptry>=0.23.1",
    "import-linter>=2.11",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
    "vulture>=2.14",
    "zizmor>=1.25.2",
]
mutation = [
    "mutmut>=3.6.0",
]
crashfuzz = [
    # atheris 3.0.0 ships cp311-cp313 wheels only; the marker keeps the
    # lock resolvable on 3.14 (where `nox -s crashfuzz` cannot run yet).
    "atheris>=3.0.0; python_version < '3.14'",
]
test = [
    "diff-cover>=10.3.0",
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
]
build = [
    "check-wheel-contents>=0.6.3",
    "twine>=6.2.0",
]
