[project]
name = "ferm"
# Version is dynamic: hatch-vcs derives it from the git tag (see
# [tool.hatch.version] below). No static version string lives here.
dynamic = ["version"]
description = "For Easy Rule Making - a frontend for iptables (Python port)"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
authors = [{ name = "Auke Kok" }, { name = "Max Kellermann" }]
maintainers = [{ name = "Boris Talovikov", email = "boris@talovikov.ru" }]
keywords = ["firewall", "iptables", "nftables", "netfilter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking :: Firewalls",
]
dependencies = []

[project.optional-dependencies]
# Floor is 2.2.1, not the latest: Debian bookworm ships dnspython 2.2.1, so
# the deb's unversioned ``Recommends: python3-dnspython`` must be satisfiable
# there. The resolver only uses ``resolve(..., search=...)`` (a 2.0+ kwarg),
# so 2.2.1 is sufficient; the lowest bound is exercised by the deps_lowest
# nox session. Without the package the resolver falls back to stdlib
# getaddrinfo (A/AAAA only).
dns = ["dnspython>=2.2.1"]

[project.urls]
Homepage = "https://github.com/6RUN0/ferm"
Repository = "https://github.com/6RUN0/ferm"
Changelog = "https://github.com/6RUN0/ferm/blob/main/CHANGELOG.md"

[project.scripts]
ferm = "pyferm.cli:main"
import-ferm = "pyferm.import_ferm:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# The repository carries TWO foreign tag namespaces reachable from this
# branch -- upstream Perl tags v1.*/v2.* and annotated port/phase-*. Left
# unrestricted, setuptools-scm would either fail (HEAD on port/phase-3) or
# pick v2.6 and emit 2.7.devN. So describe/regex are scoped EXCLUSIVELY to
# the port's own release scheme py-v<PEP440> (e.g. py-v0.1.0). Until the
# first py-v* tag this yields 0.0.1.devN+g<hash> (verified); fallback_version
# covers a git-less checkout (archive/source tarball).
[tool.hatch.version.raw-options]
git_describe_command = [
  "git", "describe", "--dirty", "--tags", "--long", "--match", "py-v[0-9]*",
]
tag_regex = "^py-v(?P<version>[0-9].*)$"
fallback_version = "0.0.0"

# No [tool.hatch.build.hooks.vcs]/version-file hook: it would write
# src/pyferm/_version.py, a file with no consumer (__version__ is read only
# via importlib.metadata.version("ferm")). The version flows through METADATA
# alone -- one channel, no dangling second file.

[tool.hatch.build.targets.wheel]
# src-layout is not auto-detected by hatchling; name the package explicitly.
packages = ["src/pyferm"]

# sdist allowlist -- the mirror of the .gitattributes export-ignore that
# guards the deb source-tar. hatchling does NOT read .gitattributes, so the
# PyPI sdist needs its own explicit list, or private paths (CLAUDE.md, .omc,
# the internal specs, the wild-config corpus) would ship in the unrevocable
# ferm-<ver>.tar.gz. only-include is fail-closed: anything not named is
# absent.
[tool.hatch.build.targets.sdist]
only-include = ["src/pyferm", "README.md", "CHANGELOG.md", "COPYING"]

[tool.uv]
default-groups = ["dev", "test", "lint"]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests", "packaging"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",    # pycodestyle + pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "D",    # pydocstyle
  "UP",   # pyupgrade
  "B",    # bugbear
  "FBT",  # boolean-trap (positional bool args)
  "A",    # builtins shadowing
  "C4",   # comprehensions
  "SIM",  # simplify
  "PTH",  # use pathlib
  "RUF",  # ruff-specific
  "PIE",  # misc lints
  "RET",  # return consistency
  "RSE",  # raise: drop redundant parens on bare raise
  "TID",  # tidy imports
  "FURB", # refurb modernisation
  "TRY",  # exception hygiene
  "ARG",  # unused arguments
  "PERF", # performance anti-patterns
  "BLE",  # blind except
  "TC",   # typing-only imports
  "SLF",  # private-member access
  "ICN",  # import naming conventions
  "PGH",  # pygrep (blanket noqa / type: ignore)
  "PL",   # pylint (PLE/PLW/PLC/PLR)
  "DTZ",  # naive datetime
  "G",    # logging format
  "LOG",  # logging hygiene
  "PT",   # pytest style
  "ERA",  # commented-out code
  "ISC",  # implicit string concatenation
  "FLY",  # static str.join -> f-string
  "SLOT", # __slots__ on str/tuple subclasses
]
# D213 (summary on the second line) is the project's docstring shape;
# it is mutually exclusive with D212, which the pep257 convention
# enables -- hence the explicit extend-select + D212 ignore.
extend-select = ["D213"]
ignore = [
  "D212",   # we use D213 (summary on second line); see extend-select
  "TRY003", # long messages in raise FermError(...) ARE the product's
  # error text, ported verbatim from the Perl die strings;
  # a custom exception class per message is over-engineering
  "PLC0415", # function-local imports are deliberate: signal/termios
  # mirror the oracle's lazy `require POSIX`, and tests
  # import the unit under test inside the test function
  # The complexity quartet is inherited: enter()/handle() port the
  # oracle's ~770-line recursive-descent monolith verbatim (a sanctioned
  # phase 1 decision); splitting it is the Phase 7 AST refactor, and the
  # golden suite guards the behaviour until then.
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  # FBT001/FBT002 (boolean-typed positional parameter) fire only on the
  # ported recursive-descent signatures -- parse_option/_parse_def_option/
  # _maybe_consume_negation/negate_value/pick_resolver -- whose positional
  # bool shape mirrors the Perl oracle verbatim (same Phase 7 / golden-
  # suite-guarded bucket as the complexity quartet above).  FBT003 (a bare
  # bool passed positionally at a *call*) stays on: it is a call-site
  # readability gate that changes no signature.
  "FBT001", # boolean-typed positional parameter in a definition
  "FBT002", # boolean default for a positional parameter
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["pyferm"]

[tool.ruff.lint.extend-per-file-ignores]
# Test-method names are their own documentation (D); asserting against
# literal expected values is the point of a test (PLR2004) -- and passing
# a bare bool to the unit under test (format_bool(True), pick_resolver(
# True, ...)) is that same literal-as-input pattern, not a boolean trap
# (FBT). Probing a module's private helpers (SLF001) is legitimate: a unit
# test exists to pin internal logic like packaging.build._expected_version.
"tests/*" = ["D", "PLR2004", "FBT", "SLF001"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "packaging"]
strict = true
warn_unreachable = true
# Stricter-than-strict: TypedDict/Concatenate soundness checks plus the
# opt-in error codes strict does not enable.  ignore-without-code keeps
# every suppression auditable (pairs with the pygrep blanket-ignore hook).
extra_checks = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "unused-awaitable",
]
# The datapath e2e harness (tests/e2e/datapath/) is container-only: it runs
# as flat scripts on the image's sys.path (``python3 /work/datapath/...``),
# not as an importable package, so its sibling imports (``import netns`` /
# ``oracle`` / ``scenarios``) cannot resolve under the package type-checker.
# Like the fuzz harnesses it stays out of the gate; the host-side oracle and
# scenarios unit tests under tests/unit/ remain fully checked.
#
# packaging/dns_gate/ is the same kind of beast: a flat container script that
# imports the untyped dnslib (no stubs published), run only inside its own
# throwaway image, never on the host. The gate proving it works is the
# container run itself, not the host type-checker.
exclude = ['^tests/e2e/datapath/', '^packaging/dns_gate/']

[[tool.mypy.overrides]]
# The flat harness module names exist only on the container's sys.path;
# off the image they resolve to Any so the host unit tests still import them.
module = ["netns", "oracle", "scenarios", "driver"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The golden-harness canonicalizers (tests/golden/) are reached by a runtime
# sys.path insert from the equivalence-gate unit test, not as an installed
# package, so mypy cannot resolve them off that path; pyright resolves them
# via its ``tests`` execution-environment extra path.
module = ["golden.normalize", "golden.sortpl"]
ignore_missing_imports = true

[tool.pyright]
# Pin the analysis scope: without it pyright walks the whole worktree
# (including throwaway scratch files) and the gate stops being stable.
include = ["src", "tests", "noxfile.py", "packaging"]
# The container-only datapath e2e harness uses a flat-script import model the
# package checker cannot resolve (see the matching [tool.mypy] exclude); keep
# its diagnostics out of the gate while leaving it importable for the tests.
# packaging/dns_gate/ is the same: a container-only flat script over the
# untyped dnslib, so it stays out of the host type gate too.
ignore = ["tests/e2e/datapath", "packaging/dns_gate"]
pythonVersion = "3.11"
# Match mypy's strictness: two checkers at different strictness levels
# only pretend to be redundant -- the weaker one stops catching the
# classes of errors the duplication exists for.
typeCheckingMode = "strict"

# Tests stay strict except for patterns that are the point of a test:
# importing the private unit under test, loose lambda stubs (whose
# completeness mypy --strict still checks), and autouse fixtures that
# pyright cannot see being called.
[[tool.pyright.executionEnvironments]]
root = "tests"
# The env root replaces the project root for import resolution, which
# would break the suite's absolute self-imports (``tests.corpus.canon``).
# The datapath dir mirrors the host unit tests' runtime sys.path insert so
# their flat harness imports (``import oracle`` / ``scenarios``) resolve;
# the harness's own diagnostics stay suppressed via the [tool.pyright]
# ``ignore`` above.
extraPaths = [".", "tests/e2e/datapath"]
reportPrivateUsage = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnusedFunction = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-config/--strict-markers turn config typos and unknown marks
# into errors instead of silently-ignored decoration.
addopts = "-ra --strict-config --strict-markers"
markers = [
  "lockout: containerized --interactive anti-lockout e2e (opt-in, needs docker)",
  "nft_e2e: real-nft backend e2e -- round-trip/coexistence (docker) + --plan nft -c validation (rootless unshare) (opt-in)",
  "datapath_e2e: containerized real-traffic datapath + backend-parity e2e (opt-in, needs docker)",
  "docker_coexist_e2e: docker-in-docker coexistence e2e -- ferm reload leaves real docker-bridges tables untouched (opt-in, needs docker)",
  "etckeeper_e2e: containerized etckeeper integration e2e -- apply/commit/rollback/re-apply against real etckeeper + git + nft (opt-in, needs docker)",
  "conformance: nft canonicalizer conformance vs upstream .t corpus + live nft (opt-in, needs FERM_NFT_CORPUS)",
]
xfail_strict = true
# Any warning is a failure: deprecations surface on the oldest
# interpreter of the matrix instead of breaking on the newest one, and
# (with PYTHONWARNDEFAULTENCODING=1, set by the nox sessions)
# EncodingWarning turns every locale-dependent IO default into an error.
filterwarnings = ["error"]
# A hung test (interactive prompt, stuck subprocess) must fail, not
# stall the gate.  The thread method, not signal: the port itself owns
# SIGALRM (--interactive), so a per-test alarm could be clobbered.
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["pyferm"]
branch = true

[tool.coverage.report]
show_missing = true
# No-regression floor just under the measured baseline (84.58% on
# 2026-06-11); ratchet it up as the port's error paths gain tests.
# New code is additionally held to 90% by the diff-cover patch gate in
# the ``coverage`` nox session.
fail_under = 84
exclude_also = [
  # Type-only branches never execute at runtime.
  "if TYPE_CHECKING:",
  # Escape hatch for paths a test cannot exercise (documented per site).
  "pragma: no cover",
]

[tool.importlinter]
root_packages = ["pyferm"]

# The render/commit seam the Phase 2 nft backend depends on: the
# compiler core reaches execution only through injected callables
# (execute/emit_line/read_save), never by importing the backend.  Only
# the cli composition root may wire the two sides together.
[[tool.importlinter.contracts]]
name = "the compiler core does not import the backend"
type = "forbidden"
source_modules = [
  "pyferm.errors",
  "pyferm.values",
  "pyferm.config",
  "pyferm.tokenizer",
  "pyferm.modules",
  "pyferm.resolver",
  "pyferm.scope",
  "pyferm.rules",
  "pyferm.domains",
  "pyferm.functions",
  "pyferm.parser",
  "pyferm.import_ferm",
]
forbidden_modules = ["pyferm.backend"]

# The full dependency order, frozen from the measured import graph
# (TYPE_CHECKING imports included).  Modules sharing a layer (``|``)
# must stay mutually independent.  A new edge that violates this is
# either a bug or a deliberate design change -- update the contract
# explicitly in the latter case.
[[tool.importlinter.contracts]]
name = "bottom-up layering"
type = "layers"
layers = [
  "pyferm.cli | pyferm.import_ferm",
  "pyferm.backend",
  "pyferm.parser",
  "pyferm.functions",
  "pyferm.domains",
  "pyferm.rules",
  "pyferm.scope",
  "pyferm.modules | pyferm.tokenizer | pyferm.resolver",
  "pyferm.values",
  "pyferm.config",
  "pyferm.errors",
]

[tool.bandit]
# ferm's job is to run iptables and admin-authored shell commands as
# root, faithfully porting Perl's system()/backticks/pipe-opens -- the
# subprocess family of findings describes the product, not a defect.
# New findings outside this list still fail the audit session.
skips = [
  "B101", # assert: dev-time invariants; ferm is never run with -O
  "B105", # hardcoded-password heuristic fires on the lexer's
  # `token` variables (a parser token is not a credential)
  "B404", # import subprocess
  "B602", # shell=True -- the Perl system()/backtick port
  "B603", # subprocess without shell (tool paths from find_tool)
  "B604", # shell=True via the injected execute callable
  "B607", # partial executable path: --test mode uses bare tool
  # names by design (find_tool returns `iptables` verbatim)
]

[tool.codespell]
# reference/ is the frozen Perl oracle and tests/corpus/configs holds
# third-party wild configs verbatim: never spell-check upstream text.
skip = ".git,.venv,.nox,uv.lock,reference,tests/corpus/configs,htmlcov,build,dist,mutants,*.pyc"
# netfilter vocabulary codespell mis-flags:
# * iif -- nft "input interface" expression
# * rsource -- iptables `recent --rsource`
# * ect -- ECN ECT codepoint (ecn-ip-ect)
# * nd -- IPv6 Neighbor Discovery (datapath e2e comments)
ignore-words-list = "iif,rsource,ect,nd"

[tool.deptry]
# The import name differs from the distribution name (ferm -> pyferm).
known_first_party = ["pyferm"]
# noxfile.py imports its dev-group tooling by design; mutants/ is
# mutmut's generated working copy of src and tests; fuzz/ imports
# atheris from its own opt-in group (crashfuzz); packaging/dns_gate/ is a
# container-only harness whose resolver.py imports dnslib, installed only
# inside the gate's throwaway image and never a project dependency.
extend_exclude = [
  "reference",
  "noxfile\\.py",
  "mutants",
  "fuzz",
  "packaging/dns_gate",
]

[tool.vulture]
# Clean at 80 today; the hook is a no-regression gate against dead code
# creeping in during the port (min_confidence below 80 drowns in the
# dataclass fields the rule-structure contract carries for Phase 2).
min_confidence = 80
paths = ["src/pyferm"]

[tool.mutmut]
# src-layout: mutmut copies each source path into mutants/ verbatim,
# prepends mutants/src to sys.path and drops the original src entry, so
# `import pyferm` resolves to the trampoline-instrumented copy.
source_paths = ["src"]
# Kill set: the in-process unit suite only.  The differential property
# fuzzers cover nearly every line, so coverage-based selection would
# pick them for almost every mutant at dozens of Perl-oracle subprocess
# calls per run; golden/corpus suites execute `python -m pyferm` in a
# child process, which imports the unmutated venv install and can never
# kill a mutant (the trampoline activates via sys.path + env var).
pytest_add_cli_args_test_selection = ["tests/unit"]
# Deterministic test order keeps mutmut's per-test timing baseline
# (its timeout estimates) stable across runs.
pytest_add_cli_args = ["-p", "no:randomly"]

[dependency-groups]
dev = ["nox>=2026.4.10", "pre-commit>=4.6.0"]
lint = [
  "actionlint-py>=1.7.12.24",
  "bandit[toml]>=1.9.4",
  "deptry>=0.23.1",
  "import-linter>=2.11",
  "mypy>=2.1.0",
  "pip-audit>=2.10.0",
  "pyright>=1.1.410",
  "ruff>=0.15.16",
  # Type stubs for the provenance-manifest reader; PyYAML ships no py.typed,
  # so mypy --strict needs the stub package (the runtime dep lives in `test`).
  "types-pyyaml>=6.0.12",
  "vulture>=2.14",
  "zizmor>=1.25.2",
]
mutation = ["mutmut>=3.6.0"]
crashfuzz = [
  # atheris 3.0.0 ships cp311-cp313 wheels only; the marker keeps the
  # lock resolvable on 3.14 (where `nox -s crashfuzz` cannot run yet).
  "atheris>=3.0.0; python_version < '3.14'",
]
test = [
  "diff-cover>=10.3.0",
  # Floor matches the ``dns`` extra (2.2.1, the bookworm version): the test
  # group must not pin dnspython HIGHER than the extra, or ``deps_lowest``
  # (--resolution lowest-direct, installing both the test group and .[dns])
  # would resolve to the test floor and the lower-bound test would be theatre.
  # uv.lock still resolves the normal suite to the latest dnspython.
  "dnspython>=2.2.1",
  "hypothesis>=6.155.2",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-randomly>=4.1.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.6.0",
  # Provenance manifest (tests/corpus/provenance.yaml) is parsed by
  # test_provenance.py via yaml.safe_load; floor matches the bookworm-era
  # 6.0.x line already resolved in .venv.
  "pyyaml>=6.0.1",
]
build = ["check-wheel-contents>=0.6.3"]
